--- a/styles/images/lab04.css
+++ b/styles/images/lab04.css
@@ -16,3 +16,38 @@ h1 {
     font-size: 2em; 
     font-weight: bold; 
 }
+* { font-family: calibri, sans-serif; } 
+h2 {
+    color: rgb(0,128,128);
+    font-size: 1.5em;
+    font-weight: bold; 
+
+}
+aside, footer { font-style: italic; }  
+h1, h2, h3 {font-family: arial, sans-serif; } 
+th, td, table {
+    border: 1px solid black;  
+}
+#images {
+    text-align : center;  /* careful: center has US spelling */
+    }
+#headings3 {
+    color: red;
+}
+.special {
+    color: darkorange;
+    font-weight:bold;
+   }
+.Right {
+    text-align: right;
+} 
+ol ul {
+    list-style-type : square; 
+} 
+aside:hover {
+    display: none;
+}
+menuitem:hover {
+    color: lightblue;
+    border: darkblue;
+}
