--- a/styles/images/lab04.css
+++ b/styles/images/lab04.css
@@ -41,6 +41,11 @@ th, td, table {
 .Right {
     text-align: right;
 } 
+nav a {
+    text-decoration: none;
+    padding:0.2em 0.6em;
+    border: 4px solid #ccc;
+   } 
 ol ul {
     list-style-type : square; 
 } 
